<resources>
    <string name="app_name">LanguageDemo</string>

    <string name="multi_language">多语言</string>

    <string name="setting">设置</string>

    <string name="system_language">系统语言：</string>

    <string name="current_language">当前语言：</string>

    <string name="other_pages">其他页面</string>

    <string name="choose_lang">语言选择</string>

    <string name="system_lang">系统语言</string>

    <string name="chinese">中文</string>

    <string name="english">英文</string>

    <string name="traditional_chinese">中文繁体</string>

</resources>
