<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--头部-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/multi_language"
            android:textColor="#000"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginRight="12dp"
            android:src="@drawable/ic_settings" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_sys_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_language"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_cur_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/current_language"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_other_pages"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="50dp"
            android:background="#FFF"
            android:gravity="center"
            android:text="@string/other_pages"
            android:textColor="#000"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>