<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".SettingActivity">
    <!--头部-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_return"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting"
            android:textColor="#000"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_choose_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/choose_lang"
            android:textColor="#7A7A7A"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/lay_system"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#FFF"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/system_lang"
                android:textColor="#4A4A4A"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_system"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:padding="2dp"
                android:src="@drawable/ic_check" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lay_chinese"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="1dp"
            android:background="#FFF"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/chinese"
                android:textColor="#4A4A4A"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_chinese"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:padding="2dp"
                android:src="@drawable/ic_check"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lay_english"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="1dp"
            android:background="#FFF"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/english"
                android:textColor="#4A4A4A"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_english"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:padding="2dp"
                android:src="@drawable/ic_check"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lay_traditional_chinese"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="1dp"
            android:background="#FFF"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/traditional_chinese"
                android:textColor="#4A4A4A"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_traditional_chinese"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:padding="2dp"
                android:src="@drawable/ic_check"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>